<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.personalmedicalrecord.ui.patient.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_patient_home" />

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.capstone.personalmedicalrecord.ui.patient.data.records.RecordsFragment"
        android:label="@string/title_records"
        tools:layout="@layout/fragment_records" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.personalmedicalrecord.ui.patient.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_patient_profile" />

    <fragment
        android:id="@+id/navigation_other"
        android:name="com.capstone.personalmedicalrecord.ui.patient.other.OtherFragment"
        android:label="@string/title_other"
        tools:layout="@layout/fragment_patient_other" />
</navigation>